# scdali

./: .gitignore  LICENSE  README.md  citation.md  contact.md  faq.md  index.md  installation.md  requirements.txt  setup.cfg  setup.py  tutorials.md  usage.md
_layouts/: default.html
examples/: scdali_example.ipynb
scdali/: __init__.py  run_scdali.py  run_scdali_interpolation.py  run_scdali_tests.py
scdali/models/: __init__.py  core.py  glm.py  glmm.py  gp.py  lm.py  lrt.py  mean_lrt.py  ova.py  scipy_cluster.py  ttest.py
scdali/test/: test_fit_polya.py
scdali/utils/: matop.py  parallel.py  run_model.py  simulate.py  stats.py
