[metadata]
author = Tobias Heinen
author_email = t.heinen@dkfz.de
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
description = Test for allelic imbalance in single cells.
download_url = https://github.com/PMBio/scdali
keywords = single-cell, context-specific regulation
license = BSD-3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Windows, MacOS, Linux
name = scdali
url = https://github.com/PMBio/scdali
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >= 3.6
install_requires =
    numpy-sugar>=1.5.3
    numpy>=1.18.0
    scipy>=1.5.3
    chiscore>=0.2.3
    gpflow==2.1.3
    joblib>=0.17.0
    statsmodels>=0.12.0
    pytest>=5.4.3
    tqdm>=4.50.2

